# JonZeolla.github.io

./: .exrc  .gitignore  CNAME  Dockerfile  Pipfile  README.md  Taskfile.yml  _config.yml  index.html  index.md  params.json  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md  SECURITY.md
.github/workflows/: deploy.yml  pr.yml  testing.yml  update.yml
docs/: about-me.md  conf.py  index.rst  meet-with-jon.md  playlist.md  resume.md  workshop.md  youtube.md
docs/labs/: TODO  container-from-scratch.md  container-from-scratch.md.hold  container-security-101.md  container-security-201.md  hold.container-from-scratch  index.rst  labs-archive.md  oci-image-teardown.md  oci-image-teardown.md.hold  policy-as-code.md  todo.container-security  todo.general  todo.policy-as-code
docs/ref/: aws_cloud9.md  aws_ubuntu20.04.md  aws_ubuntu_20.04.md  cloudformation_ubuntu20.04.yml  content.md  jon-zeolla-details.md  jon-zeolla.md  jz-content.md
docs/shared/: aws_ubuntu_20.04.md
docs/videos/: index.rst
javascripts/: tables.js
lab/: .terraform.lock.hcl  instance_id  lab.tf
lab-materials/: index.html
opentofu/: main.tf  outputs.tf  user_data.sh  variables.tf
pittsburgh-infosec/: index.html
stylesheets/: stylesheet.css
terraform/: environment.tf  todo.environment.tf.md
tests/: '  README.md  TODO.future_tests.md  example.py  lab.tf.j2  test_labs.py
